runtime/tests/cases/variables/errors/extern_shadows_save.bobbin
save gold = 50
extern gold

You have {gold} gold.
